--- a/examples/react-express/package.json
+++ b/examples/react-express/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "server:build": "tsc --project ./tsconfig.server.json",
-    "server:start": "yarn server:build && node ./build-server/server.js --experimental-modules",
+    "server:start": "yarn server:build && node ./build-server/server --experimental-modules",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
