--- a/examples/react-express/package.json
+++ b/examples/react-express/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mpajunen/rest-type-map": "file:../..",
+    "@mpajunen/rest-type-map": "*",
     "@types/express": "^4.17.1",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
@@ -18,12 +18,9 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "client:start": "react-scripts start",
     "server:build": "tsc --project ./tsconfig.server.json",
-    "server:start": "yarn server:build && node ./build-server/server --experimental-modules",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "server:start": "yarn server:build && node ./build-server/server --experimental-modules"
   },
   "proxy": "http://localhost:3101/",
   "eslintConfig": {
