--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "author": "Mikael Pajunen",
   "license": "MIT",
   "private": false,
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "build": "tsc"
   },
